styles.css
/*Reset*/

html {
    box-sizing: border-box;
    font-family: 'Noto Sans', sans-serif;
    font-size: 16px;
    overflow-x: hidden;
    overscroll-behavior-y: none;
    scroll-behavior: smooth;
}

*,
*:before,
*:after {
    box-sizing: inherit;
}

body,
h1,
h2,
h3,
h4,
h5,
h6,
p,
ol,
ul {
    margin: 0;
    padding: 0;
    font-weight: 400;
    line-height: 1.5;
    -webkit-font-smoothing: antialiased;
    overflow-wrap: break-word;
}

h4 {
    font-weight: 600;
}

p {
    text-wrap: pretty;
}


h1,
h2,
h3,
h4,
h5,
h6 {
    text-wrap: pretty;
}


img,
picture,
video,
canvas,
svg {
    display: block;
    max-width: 100%;
}

input,
button,
textarea,
select {
    font: inherit;
}

#root,
#__next {
    isolation: isolate;
}

/*Global styles*/

.bold-text {
    font-weight: 600;
}

body {
    display: flex;
    flex-direction: column;
    align-items: center;
    overflow-x: hidden;
}

header {
    display: flex;
    flex-direction: column;
    padding: 1rem;
    max-width: 960px;
    width: 100%;
    font-size: 1.25rem;
    cursor: pointer;
}

header:hover {
    color: #2d55c2;
}

.logo {
    font-weight: 600;
    font-size: 1.25rem;
}

nav {
    display: flex;
    gap: .75rem;
    padding: 1rem 1rem;
    font-size: 1rem;
    width: 100%;
    max-width: 960px;
}

main {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
}

footer {
    color: white;
    background-color: black;
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 4rem 0;
}

footer a {
    text-decoration: none;
}

.footer-content {
    max-width: 960px;
    display: grid;
    grid-template-columns: 2fr 1fr;
    column-gap: 4rem;
    row-gap: 1rem;
    padding: 1rem;
    width: 100%;
}

.projects {
    display: flex;
    flex-direction: column;
}

.links {
    display: flex;
    flex-direction: column;
    gap: 2rem;
}

.sub-links {
    display: flex;
    flex-direction: column;
    gap: .25rem;
}

.section-title {
    text-transform: uppercase;
    margin-bottom: .5rem;
    font-size: .8rem;
}

.footer-list-items {
    display: flex;
    flex-direction: column;
    max-width: fit-content;
    gap: .5rem;
}

address {
    display: flex;
    flex-direction: column;
    gap: 0.25rem;
    font-style: normal;
    max-width: fit-content;
}

.link-button {
    color: white;
    background-color: #303030;
    padding: .5rem .75rem;
    border-radius: .5rem;
    max-width: fit-content;
    text-decoration: none;
    cursor: pointer;
    margin-top: 1rem;
}

.link-button:hover {
    color: white;
    background-color: #2d55c2;
}

a {
    color: inherit;
    text-decoration-thickness: 3px;
    text-underline-offset: 6px;
}

a:hover {
    color: #2d55c2;
}

.current {
    cursor: default;
    text-decoration-style: wavy;
    pointer-events: none;
    color: #2d55c2;
}

.current-footer {
    cursor: default;
    pointer-events: none;
    color: #6b90f4;
}

.hero {
    margin-top: 4rem;
    width: 100%;
    padding-top: 4rem;
    padding-bottom: 6rem;
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-bottom: 4rem;
}

.hero-content {
    max-width: 960px;
    gap: 0.75rem;
    display: flex;
    flex-direction: column;
    padding-left: 1rem;
    padding-right: 5rem;
    width: 100%;
}

.hero-image {
    max-width: 960px;
    padding: 1rem;
    margin-top: 4rem;
}

.content-section {
    display: flex;
    flex-direction: column;
    gap: 2rem;
    max-width: 960px;
    padding: 1rem;
    margin-bottom: 4rem;
}

.content-paragraph-snippet {
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

.content-image {
    margin-top: 1rem;
}

/*Page specific styles*/

/*index.html*/

.intro {
    display: flex;
    flex-direction: column;
    gap: 0.75rem;
    padding-top: 4rem;
    padding-bottom: 6rem;
    padding-left: 1rem;
    padding-right: 1rem;
    max-width: 960px;
}

.intro ul {
    font-size: 1.375rem;
    padding-inline-start: 1.25rem;
}

.list-title {
    font-size: 1.3755rem;
}

.cases {
    color: white;
    background-color: #1A1A1A;
    display: flex;
    flex-direction: column;
    gap: 4rem;
    padding-top: 6rem;
    padding-bottom: 6rem;
    width: 100%;
    align-items: center;
}

.case {
    display: grid;
    grid-template-columns: 1fr 1fr;
    align-items: center;
    gap: 1rem;
    max-width: 960px;
    padding: 1rem;
    width: 100%;
}

.case-info {
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

.bio {
    display: grid;
    grid-template-columns: 1fr 1fr;
    align-items: center;
    gap: 1rem;
    max-width: 960px;
    padding-left: 1rem;
    padding-right: 1rem;
    padding-top: 6rem;
    padding-bottom: 6rem;
}

.bio-text {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    font-size: 1.125rem;
}

.bio-title {
    font-size: 1.25rem;
    max-width: 70%;
}

.bio-description {
    max-width: 90%;
}

/*interests.html*/

.image-gallery {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    gap: 1rem;
    max-width: 960px;
    padding: 1rem;
    padding-bottom: 6rem;
    width: 100%;
}

.image-gallery img {
    aspect-ratio: 1/1;
    object-fit: cover;
}

/*showcase.html*/

.showcase {
    display: grid;
    grid-template-columns: 1fr 2fr;
    align-items: center;
    gap: 1rem;
    max-width: 960px;
    padding: 1rem;
    width: 100%;
}

.showcase-info {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    padding-right: 2rem;
}

.showcase-image iframe {
    aspect-ratio: 16/9;
    width: 100%;
    height: auto;
}

/*camera-supervision.html*/

.hero.supervision {
    color: white;
    background-color: #0d1b15;
}

/*metro-light.html*/

.hero.metro-light {
    color: black;
    background-color: #F1E9C8;
}

/*handmud.html*/

.hero.handmud {
    color: white;
    background-color: black;
}

.image-and-description {
    display: flex;
    flex-direction: column;
    gap: 0.5rem;
}

.image-description {
    font-style: italic;
    font-size: .9rem;
    text-align: center;
}

/*Responsiveness*/

@media (width <=680px) {
    nav {
        flex-direction: column;
    }

    .intro {
        padding-top: 2rem;
        padding-bottom: 4rem;
    }

    .cases {
        gap: 3rem;
        padding-top: 3rem;
        padding-bottom: 3rem;
    }

    .case {
        grid-template-columns: 1fr;
        gap: 2rem;
    }

    .bio {
        grid-template-columns: 1fr;
        gap: 3rem;
        padding-top: 3rem;
        padding-bottom: 3rem;
    }

    .footer-content {
        max-width: 960px;
        display: grid;
        grid-template-columns: 1fr;
        gap: 3rem;
        padding: 1rem;
        width: 100%;
    }

    .showcase {
        display: grid;
        grid-template-columns: 1fr;
        align-items: center;
        gap: 2rem;
        max-width: 960px;
        padding: 1rem;
        width: 100%;
    }

    .image-gallery {
        display: grid;
        grid-template-columns: 1fr 1fr;
        gap: 1rem;
        max-width: 960px;
        padding: 1rem;
        padding-bottom: 6rem;
        width: 100%;
    }

    .bio-title {
        max-width: 100%;
    }

    .bio-description {
        max-width: 100%;
    }
}

